Downloads/project_fl-a/test/parser/bad/a_bad_fun_indent.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

def foo():
x:int = 1
